windows scrollbar fixes;

--- a/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
@@ -144,11 +144,10 @@ body.front {
   }
 
   &.windows {
-    overflow: hidden;
-    
+    overflow-x: hidden;
+
     .fullscreen {
-      overflow-y: hidden;
-      overflow-x: hidden;
+      overflow: hidden;
       
       &:fullscreen {
         overflow-y: scroll;
